--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@wppconnect-team/wppconnect": "^1.27.3",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.4.0",
     "sequelize": "^6.32.1",
+    "web-push": "^3.6.3",
     "ws": "^8.13.0"
   },
   "devDependencies": {
