--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@wppconnect-team/wppconnect": "^1.27.3",
+    "bcrypt": "^5.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
